<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.szymonkaczmarek.palapala.AboutAppFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/aboutAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutAppName"
        android:layout_centerHorizontal="true"
        android:layout_column="1"
        android:layout_marginTop="14dp"
        android:layout_row="2"
        android:layout_x="152dp"
        android:layout_y="219dp"
        android:text="@string/aboutAppVersion"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppName"
        tools:text="Version 1.0" />

    <TextView
        android:id="@+id/aboutAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_x="152dp"
        android:layout_y="219dp"
        android:text="PalaPala"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textSize="30sp"
        tools:text="PalaPala"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="103dp"
        android:layout_height="95dp"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_weight="0.13"
        android:layout_x="126dp"
        android:layout_y="59dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:srcCompat="@drawable/icon_about_app"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="Copyright © 2017 Szymon Kaczmarek"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textAboutApp"
        android:layout_width="297dp"
        android:layout_height="35dp"
        android:text="@string/textAboutApp"
        android:textAlignment="center"
        android:layout_below="@+id/aboutAppVersion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppVersion"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonContactMeAboutApp"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:text="@string/contactMeButton"
        android:layout_below="@+id/textAboutApp"
        android:layout_alignLeft="@+id/textAboutApp"
        android:layout_alignStart="@+id/textAboutApp"
        android:layout_alignRight="@+id/textAboutApp"
        android:layout_alignEnd="@+id/textAboutApp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textAboutApp" />

    <Button
        android:id="@+id/buttonRateApp"
        android:layout_width="253dp"
        android:layout_height="47dp"
        android:text="@string/buttonRate"
        android:layout_below="@+id/buttonContactMeAboutApp"
        android:layout_alignLeft="@+id/buttonContactMeAboutApp"
        android:layout_alignStart="@+id/buttonContactMeAboutApp"
        android:layout_alignRight="@+id/buttonContactMeAboutApp"
        android:layout_alignEnd="@+id/buttonContactMeAboutApp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonContactMeAboutApp" />
</android.support.constraint.ConstraintLayout>
